# PacketPilot

./: .gitignore  README.md  vercel.json
.claude/: launch.json
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md
auth0/universal-login/: README.md  page-template.liquid  theme.json
docs/: PROJECT-SPEC.md  ai-assist.md  alert-diff-plan.md  attack-chain-reconstruction-plan.md  auth0-migration-plan.md  batch-triage.md  behavioral-baseline-learning-plan.md  case-alert-queue-plan.md  evidence-custody-plan.md  evidence-custody.md  nlq.md  predictive-anomaly-detection-plan.md  reputation.md  sharing-captures-safely.md  smart-alerting-context-plan.md  time-machine.md
docs/go-to-market/: 2026-06-29-PacketPilot-GTM-Playbook.md  2026-06-29-Stripe-Go-Live-Runbook.md  oauth-providers-setup.md
docs/market-research/: 2026-07-08-artifact-extraction.md  2026-07-08-competitive-gap-analysis-and-safe-share.md  2026-07-09-market-scan-no-new-gap.md  2026-07-10-batch-case-triage.md  2026-07-11-pipeline-status-and-next-feature.md  2026-07-12-batch-fleet-triage.md  2026-07-13-headless-keylog-decryption.md  2026-07-14-backlog-saturation-findings.md  2026-07-15-backlog-triage-recommendation.md
docs/marketing/: launch-copy.md
docs/plans/: 2026-07-19-natural-language-querying.md
engine/: .gitignore  BENCHMARK.md  Cargo.toml  README.md  rust-toolchain.toml
engine/.cargo/: config.toml
engine/crates/ppcap-cli/: Cargo.toml
engine/crates/ppcap-cli/src/: cli.rs  main.rs
engine/crates/ppcap-cli/tests/: html_export.rs
engine/crates/ppcap-core/: Cargo.toml
engine/crates/ppcap-core/benches/: ingest.rs
engine/crates/ppcap-core/data/: builtin_fingerprints.json  sample_iocs.json
engine/crates/ppcap-core/examples/: dump_flows.rs
engine/crates/ppcap-core/sql/: schema.sql
engine/crates/ppcap-core/sql/queries/: q01_top_talkers.sql  q02_severity_rollup.sql  q03_category_breakdown.sql  q04_beaconing_candidates.sql  q05_protocol_hierarchy.sql  q06_port_histogram.sql  q07_per_second_histogram.sql  q08_ip_severity_map.sql
engine/crates/ppcap-core/src/: error.rs  lib.rs  packets.rs
engine/crates/ppcap-core/src/analyze/: mod.rs
engine/crates/ppcap-core/src/baseline/: mod.rs
engine/crates/ppcap-core/src/carve/: mod.rs
engine/crates/ppcap-core/src/case/: mod.rs
engine/crates/ppcap-core/src/classify/: mod.rs
engine/crates/ppcap-core/src/columnar/: mod.rs  schema.rs
engine/crates/ppcap-core/src/custody/: mod.rs
engine/crates/ppcap-core/src/decode/: l2.rs  l3.rs  l4.rs  mod.rs
engine/crates/ppcap-core/src/detect/: alerts.rs  mod.rs  rules.rs
engine/crates/ppcap-core/src/enrich/: mod.rs  reputation.rs
engine/crates/ppcap-core/src/enrich/online/: abuseipdb.rs  budget.rs  cache.rs  greynoise.rs  mod.rs  virustotal.rs
engine/crates/ppcap-core/src/export/: mod.rs
engine/crates/ppcap-core/src/fingerprint/: mod.rs
engine/crates/ppcap-core/src/flow/: mod.rs
engine/crates/ppcap-core/src/forecast/: mod.rs
engine/crates/ppcap-core/src/metrics/: mod.rs
engine/crates/ppcap-core/src/model/: alert.rs  attack_chain.rs  category.rs  finding.rs  flow.rs  incident.rs  mod.rs  output.rs  packet.rs  severity.rs  summary.rs
engine/crates/ppcap-core/src/quic/: crypto.rs  mod.rs
engine/crates/ppcap-core/src/reader/: gzip.rs  mod.rs  pcap.rs  pcapng.rs
engine/crates/ppcap-core/src/report/: mod.rs
engine/crates/ppcap-core/src/sanitize/: anon.rs  checksum.rs  l7.rs  mod.rs  packet.rs
engine/crates/ppcap-core/src/score/: mod.rs
engine/crates/ppcap-core/src/ssh/: mod.rs
engine/crates/ppcap-core/src/stats/: mod.rs
engine/crates/ppcap-core/src/timemachine/: mod.rs
engine/crates/ppcap-core/src/tls/: cert.rs  decrypt.rs  decrypted_http.rs  der.rs  http2.rs  keylog.rs  mod.rs
engine/crates/ppcap-core/tests/: alerts_e2e.rs  case_triage.rs  columnar_roundtrip.rs  decode_vectors.rs  end_to_end.rs  enrich.rs  fingerprint.rs  flow_symmetry.rs  forecast_e2e.rs  gen_container.rs  gen_frames.rs  gen_mix.rs  golden_e2e.rs  l7_enrichment_proof.rs  report_html.rs  reputation_parity.rs  sanitize_roundtrip.rs  schema_drift.rs  score.rs  threat_e2e.rs
engine/crates/ppcap-wasm/: Cargo.toml
engine/crates/ppcap-wasm/.cargo/: config.toml
engine/crates/ppcap-wasm/src/: lib.rs
engine/schema/: queries.sql
relay/: README.md  ai-relay.mjs  ai-relay.worker.js
supabase/: README.md  config.toml  seed.sql
supabase/functions/: README.md
supabase/migrations/: 0001_init.sql  0002_functions.sql  0003_rls.sql  0004_harden_functions.sql  0004b_harden_functions_public.sql  0005_views.sql  0006_bootstrap_admin.sql  0007_perf_rls.sql  0008_dashboard_rpcs.sql  0009_audit_profile_changes.sql  0010_analytics_ingest_hardening.sql  0011_traffic_read.sql  0012_feature_flags_audit.sql  0013_app_settings.sql  0014_ai_config.sql  0015_rep_config.sql  0016_account_avatars.sql  0017_pricing.sql  0018_reverse_trial.sql  0019_auth0_thirdparty.sql  0020_security_hardening.sql  0021_rate_limits.sql  0022_revert_auth0.sql  0023_reduce_rpc_surface.sql  0024_fix_admin_rpc_grants.sql  0025_drop_auth0_remnants.sql  0026_founder_seat_reservation.sql  0027_align_plan_gates.sql  0028_remove_reverse_trial.sql
supabase/tests/: rls_checks.sql
ui/: .audit-shots.mjs  .env.example  .gitignore  cockpit.html  dev.mjs  index.html  package-lock.json  package.json  playwright.config.ts  redesign.html  tailwind.config.js  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
ui/e2e/: a11y.spec.ts  admin-host.spec.ts  alerts.spec.ts  analysis.spec.ts  (+9 more)
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  main.rs
(+647 files in other folders)
