[package]
name = "packetpilot-desktop"
version = "0.1.0"
edition = "2021"
description = "PacketPilot desktop"

[lib]
name = "packetpilot_desktop_lib"
# cdylib/staticlib are only needed for mobile (Android/iOS) targets. On the
# x86_64-pc-windows-gnu desktop toolchain the cdylib's `-shared` link exports
# every symbol and overflows the PE export table ("export ordinal too large"),
# so the desktop build uses a plain rlib consumed by the binary target.
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ppcap-core = { path = "../../engine/crates/ppcap-core", features = ["online"] }
keyring = "2"
dirs = "5"
