[package]
name = "ppcap-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "ppcap_core"
path = "src/lib.rs"

[dependencies]
pcap-parser  = { workspace = true }
etherparse   = { workspace = true }
arrow        = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
parquet      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
time         = { workspace = true }

[dev-dependencies]
criterion  = { workspace = true }
peak_alloc = { workspace = true }   # global allocator declared ONLY in benches/ingest.rs
pcap-file  = { workspace = true }   # independent cross-validation of our container
tempfile   = { workspace = true }

[[bench]]
name    = "ingest"
harness = false
